# apply

./: Status Report.md
Phase 1/: Implemented: Core Voice Functionality.md  MVP Features  Using  Polkadot SDK  env.example  gitignore  package.json  readme.md  tailwind.config.js  tsconfig.json  vite.config.ts
Phase 1/Public/: public_index.html
Phase 1/docs/: Known Issues & Required Fixes.md  Phase 1 Analysis.md  Test Data.md  Using Polkadot SDK.md
Phase 1/public/: index.html  manifest.json
Phase 1/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
Phase 1/src/utils/: addressUtils.ts  constants.ts  formatters.ts  types.ts  validation.ts
Phase 2/: Milestone 1 Goals.md  README.md  env.example  gitignore  package.json  tsconfig.json  vite.config.ts
Phase 2.5/: .env.example  .gitignore  CHANGELOG.md  LICENSE.md  Readme.md
Phase 2/contracts/payment_recorder/: Cargo.toml  lib.rs
Phase 2/doc/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  TROUBLESHOOTING.md  Test Data & Validation Results.md  VOICE-COMMANDS.md  elevenlabs-integration.md  known-issues-fixes.md  mvp-features.md  technical-specs.md
Phase 2/src/: App.tsx  index.css  main.tsx
Phase 2/src/components/: VoiceInterface.tsx
Phase 2/src/hooks/: useVoice.ts
Phase 2/test/: test.md
Phrase 2.5/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Readme.md  SECURITY.md  deploy.bat  deploy.sh  package.json
Phrase 2.5/contracts/payment_recorder/: Cargo.toml  lib.rs
Phrase 2.5/contracts/payment_recorder/tests/: comprehensive_tests.rs
Phrase 2.5/docs/: DIAGRAMS.md  ENHANCED_DIAGRAMS.md  FILE_STRUCTURE_COMPLETE.md  QUICK_START.md  echopay-2-fixes-report.csv
Phrase 2.5/frontend/src/__tests__/: comprehensive-frontend-tests.test.tsx
Phrase 2.5/frontend/src/hooks/: index.ts
Phrase 2.5/frontend/voice-payment-dapp/: index.html  package.json  tsconfig.json  vite.config.ts
Phrase 2.5/frontend/voice-payment-dapp/src/: app.tsx  index.css
Phrase 2.5/frontend/voice-payment-dapp/src/services/: CommandParsingService.ts  ElevenLabsService.ts  PerformanceService.ts  SecurityService.ts
Phrase 2.5/frontend/voice-payment-dapp/src/types/: index.css  index.ts
Phrase 2.5/scripts/: setup-dev.sh  setup.sh
Phrase 2.5/workflows/: deploy.yml
deliveries/: Development Milestones.md  Goal.md  Project Specification
deliveries/Phase 1/: .env.example  .gitignore  File Struture.md  Package.json  Quick_Setup.md  Readme.md  What's Been Built.md  drizzle.config.ts  index.ts  readme.md  tsconfig.json  wrangler.toml
deliveries/Phase 1/db/: schema.ts
deliveries/Phase 2/: SPEC.md  package.json
deliveries/Phase 2 /: Design&testing&ideas  Platform Specification v2
deliveries/Phase 2/src/: index.ts
