[package]
name = "payment_recorder"
version = "1.0.0"
authors = ["EchoPay-2 Team"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.3.0", default-features = false }

[dev-dependencies]
ink_e2e = "4.3.0"

[lib]
name = "payment_recorder"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []