[package]
name = "payment_recorder"
version = "2.1.0"
authors = ["EchoPay-2 Team <team@echopay.io>"]
edition = "2021"
description = "Enhanced Payment Recording Smart Contract for EchoPay-2"
license = "MIT"
repository = "https://github.com/YanniWu88/EchoPay-2"

[dependencies]
ink = { version = "4.3", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.9", default-features = false, features = ["derive"], optional = true }

[lib]
name = "payment_recorder"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
